fixed page zoomed on mobile for seeker#show

--- a/app/assets/stylesheets/seekers.scss
+++ b/app/assets/stylesheets/seekers.scss
@@ -244,6 +244,11 @@
 
 }
 
+.add_row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 #filter_button {
     color: white;
     background-color: #686868;
